--- a/ML/Dolhopolov_ML_2/main.ipynb
+++ b/ML/Dolhopolov_ML_2/main.ipynb
@@ -6023,13 +6023,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Нормалізація Age та Fare"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -15756,7 +15749,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
