--- a/ML/Dolhopolov_ML_2/main.ipynb
+++ b/ML/Dolhopolov_ML_2/main.ipynb
@@ -6023,6 +6023,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Нормалізація Age та Fare"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
