--- a/ML/Dolhopolov_ML_3/main.ipynb
+++ b/ML/Dolhopolov_ML_3/main.ipynb
@@ -9797,7 +9797,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
